--- a/resources/sass/grid.scss
+++ b/resources/sass/grid.scss
@@ -3,7 +3,7 @@ $sm: 576px;
 $md: 768px;
 $lg: 992px;
 $xl: 1200px;
-$xxl: 1400px;
+$xxl: 1600px;
 
 .grid-container {
     display: grid;
